@@ -18,9 +18,15 @@ package me.zhengjie.gen.service.impl;
 
 import cn.hutool.core.bean.BeanUtil;
 import cn.hutool.core.bean.copier.CopyOptions;
+import cn.hutool.core.util.StrUtil;
+import cn.hutool.json.JSONArray;
+import cn.hutool.json.JSONUtil;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import me.zhengjie.gen.domain.*;
+import me.zhengjie.gen.domain.vo.DeviceModelTemplateActuateVO;
+import me.zhengjie.gen.domain.vo.ImageBucketPathActuateVO;
+import me.zhengjie.gen.domain.vo.ImageInfoActuateVO;
 import me.zhengjie.gen.repository.DeviceModelTemplateRepository;
 import me.zhengjie.gen.repository.ImageInfoRepository;
 import me.zhengjie.gen.service.DataInfoService;
@@ -43,6 +49,8 @@ import java.sql.Timestamp;
 import java.util.*;
 import java.io.IOException;
 import javax.servlet.http.HttpServletResponse;
+import java.util.function.Supplier;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import me.zhengjie.utils.PageResult;
 import org.springframework.web.client.RestTemplate;
@@ -68,6 +76,71 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
     private final DeviceInfoMapper deviceInfoMapper;
     private final ObjectMapper objectMapper = new ObjectMapper();
 
+    // 分隔符正则：支持中英文逗号、分号、竖线
+    private static final Pattern SPLIT_PATTERN = Pattern.compile("[,，;|]+");
+
+    public static List<String> parseVersionsToList(Object input) {
+        if (input == null) {
+            return Collections.emptyList();
+        }
+
+        String str = input.toString().trim();
+
+        try {
+            List<String> result = new ArrayList<>();
+
+            if (JSONUtil.isJsonArray(str)) {
+                // 情况1: 已是合法 JSON 数组，例如 ["v1","v2"]
+                JSONArray array = JSONUtil.parseArray(str);
+                result = array.toList(String.class);
+
+            } else if (str.startsWith("[") && str.endsWith("]")) {
+                // 情况2: 伪数组格式，例如 ['v1','v2'] 或 ["v1","v2"]
+                result = parseQuasiArray(str);
+
+            } else if (StrUtil.containsAny(str, ',', '，', ';', '|')) {
+                // 情况3: 分隔符字符串，例如 "v1,v2" 或 "v1；v2"
+                result = Arrays.stream(SPLIT_PATTERN.split(str))
+                        .map(String::trim)
+                        .filter(StrUtil::isNotBlank)
+                        .collect(Collectors.toList());
+
+            } else if (StrUtil.isNotBlank(str)) {
+                // 情况4: 单个非空值
+                result.add(str.trim());
+            }
+
+            // 清洗：去空、去重、转小写可选（根据业务决定）
+            List<String> cleaned = result.stream()
+                    .filter(Objects::nonNull)
+                    .map(String::trim)
+                    .filter(StrUtil::isNotBlank)
+                    .distinct()
+                    .collect(Collectors.toList());
+
+            return Collections.unmodifiableList(cleaned); // 返回不可变列表
+
+        } catch (Exception e) {
+            // 解析失败时返回空列表（安全兜底）
+            return Collections.emptyList();
+        }
+    }
+
+    /**
+     * 解析类似 ['a','b'] 或 ["a","b"] 的伪数组字符串
+     */
+    private static List<String> parseQuasiArray(String input) {
+        return Arrays.stream(input
+                        .replaceAll("[\\[\\]\"]", "")   // 去除 [, ], "
+                        .replaceAll("'", "")           // 去除单引号
+                        .split("[,，;|]+")              // 按分隔符拆分
+                )
+                .map(String::trim)
+                .filter(StrUtil::isNotBlank)
+                .collect(Collectors.toList());
+    }
+
+
     @Override
     public PageResult<DeviceInfoDto> queryAll(DeviceInfoQueryCriteria criteria, Pageable pageable) {
         Page<DeviceInfo> page = deviceInfoRepository.findAll((root, criteriaQuery, criteriaBuilder) -> QueryHelp.getPredicate(root, criteria, criteriaBuilder), pageable);
@@ -87,30 +160,6 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
         return deviceInfoMapper.toDto(deviceInfo);
     }
 
-    @Override
-    @Transactional(rollbackFor = Exception.class)
-    public void create(DeviceInfo resources) {
-        if (deviceInfoRepository.existsByModel(resources.getModel())) {
-            throw new RuntimeException("设备型号已存在");
-        }
-        deviceInfoRepository.save(resources);
-    }
-
-    @Override
-    @Transactional(rollbackFor = Exception.class)
-    public void update(DeviceInfo resources) {
-        DeviceInfo deviceInfo = deviceInfoRepository.findById(resources.getId()).orElseGet(DeviceInfo::new);
-        ValidationUtil.isNull(deviceInfo.getId(), "DeviceInfo", "id", resources.getId());
-        deviceInfo.copy(resources);
-        deviceInfoRepository.save(deviceInfo);
-    }
-
-    @Override
-    public void deleteAll(Integer[] ids) {
-        for (Integer id : ids) {
-            deviceInfoRepository.deleteById(id);
-        }
-    }
 
     // 修改 DeviceInfoServiceImpl.java 中的 download 方法
     @Override
@@ -182,6 +231,19 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
             deviceInfo.setUpdatedAt(now);
             // deviceInfo.setStatus(DeviceInfo.STATUS_ONLINE);
 
+            // TODO 数据校验前端也要做！ 包括adot_resp，和 not support version
+
+            // 假设 dataMap 是从某处获取的原始数据，其中 adoptResp 是一个 JSON 字符串
+            String adoptRespStr = (String) dataMap.get("adoptResp");
+            Map<String, Object> adoptRespMap = null;
+            if (adoptRespStr != null && !adoptRespStr.trim().isEmpty()) {
+                try {
+                    adoptRespMap = objectMapper.readValue(adoptRespStr, Map.class);
+                } catch (IOException e) {
+                    throw new IllegalArgumentException("解析 adoptResp JSON 失败", e);
+                }
+            }
+
             // 提取并创建DeviceModelTemplatePO
             DeviceModelTemplatePO modelTemplate = DeviceModelTemplatePO.builder()
                     .model(deviceInfo.getModel())
@@ -190,11 +252,11 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
                     .version((String)dataMap.get("version"))
                     .controllerVersion((String)dataMap.get("controllerVersion"))
                     .minControllerVersion((String)dataMap.get("minControllerVersion"))
-                    .notSupportControllerVersion(convertToObjectList(dataMap.get("notSupportControllerVersion"), String.class))
+                    .notSupportControllerVersion(parseVersionsToList((String)dataMap.get("notSupportControllerVersion")))
                     .type((String)dataMap.get("type"))
                     .modelType((String)dataMap.get("modelType"))
-                    .ippt((Boolean)dataMap.get("ippt"))
-                    .adoptResp((String)dataMap.get("adoptResp"))
+                    .ippt(Boolean.parseBoolean((String)dataMap.get("ippt")))
+                    .adoptResp(adoptRespMap)
                     .build();
 
             // 保存模板信息
@@ -204,26 +266,28 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
             // 构建 imgBucketPathMap
             Map<String, String> imgBucketPathMap = new HashMap<>();
             if (dataMap.containsKey("smallImgBucketPathForWeb")) {
-                imgBucketPathMap.put("smallImgBucketPathForWeb", (String)dataMap.get("smallImgBucketPathForWeb"));
+                imgBucketPathMap.put("small_img_bucket_path_for_web", (String)dataMap.get("smallImgBucketPathForWeb"));
             }
             if (dataMap.containsKey("heatmapImgBucketPathForWeb")) {
-                imgBucketPathMap.put("heatmapImgBucketPathForWeb", (String)dataMap.get("heatmapImgBucketPathForWeb"));
+                imgBucketPathMap.put("heatmap_img_bucket_path_for_web", (String)dataMap.get("heatmapImgBucketPathForWeb"));
             }
             if (dataMap.containsKey("bigImgBucketPathForWeb")) {
-                imgBucketPathMap.put("bigImgBucketPathForWeb", (String)dataMap.get("bigImgBucketPathForWeb"));
+                imgBucketPathMap.put("big_img_bucket_path_for_web", (String)dataMap.get("bigImgBucketPathForWeb"));
             }
             if (dataMap.containsKey("hdpiImgBucketPathForApp")) {
-                imgBucketPathMap.put("hdpiImgBucketPathForApp", (String)dataMap.get("hdpiImgBucketPathForApp"));
+                imgBucketPathMap.put("hdpi_img_bucket_path_for_app", (String)dataMap.get("hdpiImgBucketPathForApp"));
             }
+
 
             // 提取并创建ImageInfoPO
             ImageInfoPO imageInfo = ImageInfoPO.builder()
+                    .compoundModel(deviceInfo.getModel()+" v"+deviceInfo.getModelVersion())
                     .model(deviceInfo.getModel())
                     .modelVersion(deviceInfo.getModelVersion())
                     .type((String)dataMap.get("type"))
                     .controllerVersion((String)dataMap.get("controllerVersion"))
                     .minControllerVersion((String)dataMap.get("minControllerVersion"))
-                    .notSupportControllerVersion(convertToObjectList(dataMap.get("notSupportControllerVersion"), String.class))
+                    .notSupportControllerVersion(parseVersionsToList((String)dataMap.get("notSupportControllerVersion")))
                     .imageName((String)dataMap.get("imageName"))
                     .imgBucketPathMap(imgBucketPathMap)
                     .build();
@@ -235,39 +299,6 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
             return save.getId();
         } catch (Exception e) {
             throw new RuntimeException("解析设备数据失败", e);
-        }
-    }
-
-    /**
-     * 将对象转换为指定类型的列表
-     * @param obj 输入对象
-     * @param clazz 目标元素类型
-     * @return 转换后的列表
-     */
-    @SuppressWarnings("unchecked")
-    private <T> List<T> convertToObjectList(Object obj, Class<T> clazz) {
-        if (obj == null) {
-            return new ArrayList<>();
-        }
-
-        if (obj instanceof List) {
-            // 已经是列表，直接转换
-            return (List<T>) obj;
-        } else if (obj instanceof String) {
-            // 单个字符串，包装成列表
-            List<T> result = new ArrayList<>();
-            result.add((T) obj);
-            return result;
-        } else if (obj instanceof Number) {
-            // 数字类型，转为字符串后包装成列表
-            List<T> result = new ArrayList<>();
-            result.add((T) obj.toString());
-            return result;
-        } else {
-            // 其他类型，转为字符串后包装成列表
-            List<T> result = new ArrayList<>();
-            result.add((T) obj.toString());
-            return result;
         }
     }
 
@@ -314,7 +345,7 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
                         existingTemplate.setMinControllerVersion((String)dataMap.get("minControllerVersion"));
                     }
                     if (dataMap.containsKey("notSupportControllerVersion")) {
-                        existingTemplate.setNotSupportControllerVersion((List<String>)dataMap.get("notSupportControllerVersion"));
+                        existingTemplate.setNotSupportControllerVersion(parseVersionsToList((String)dataMap.get("notSupportControllerVersion")));
                     }
                     if (dataMap.containsKey("type")) {
                         existingTemplate.setType((String)dataMap.get("type"));
@@ -326,7 +357,16 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
                         existingTemplate.setIppt((Boolean)dataMap.get("ippt"));
                     }
                     if (dataMap.containsKey("adoptResp")) {
-                        existingTemplate.setAdoptResp((String)dataMap.get("adoptResp"));
+                        String adoptRespStr = (String) dataMap.get("adoptResp");
+                        Map<String, Object> adoptRespMap = null;
+                        if (adoptRespStr != null && !adoptRespStr.trim().isEmpty()) {
+                            try {
+                                adoptRespMap = objectMapper.readValue(adoptRespStr, Map.class);
+                            } catch (IOException e) {
+                                throw new IllegalArgumentException("解析 adoptResp JSON 失败", e);
+                            }
+                        }
+                        existingTemplate.setAdoptResp(adoptRespMap);
                     }
                     deviceModelTemplateRepository.save(existingTemplate);
                 }
@@ -348,7 +388,7 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
                         existingImageInfo.setMinControllerVersion((String)dataMap.get("minControllerVersion"));
                     }
                     if (dataMap.containsKey("notSupportControllerVersion")) {
-                        existingImageInfo.setNotSupportControllerVersion((List<String>)dataMap.get("notSupportControllerVersion"));
+                        existingImageInfo.setNotSupportControllerVersion(parseVersionsToList((String)dataMap.get("notSupportControllerVersion")));
                     }
                     if (dataMap.containsKey("imageName")) {
                         existingImageInfo.setImageName((String)dataMap.get("imageName"));
@@ -360,16 +400,16 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
                         imgBucketPathMap = new HashMap<>();
                     }
                     if (dataMap.containsKey("smallImgBucketPathForWeb")) {
-                        imgBucketPathMap.put("smallImgBucketPathForWeb", (String)dataMap.get("smallImgBucketPathForWeb"));
+                        imgBucketPathMap.put("small_img_bucket_path_for_web", (String)dataMap.get("smallImgBucketPathForWeb"));
                     }
                     if (dataMap.containsKey("heatmapImgBucketPathForWeb")) {
-                        imgBucketPathMap.put("heatmapImgBucketPathForWeb", (String)dataMap.get("heatmapImgBucketPathForWeb"));
+                        imgBucketPathMap.put("heatmap_img_bucket_path_for_web", (String)dataMap.get("heatmapImgBucketPathForWeb"));
                     }
                     if (dataMap.containsKey("bigImgBucketPathForWeb")) {
-                        imgBucketPathMap.put("bigImgBucketPathForWeb", (String)dataMap.get("bigImgBucketPathForWeb"));
+                        imgBucketPathMap.put("big_img_bucket_path_for_web", (String)dataMap.get("bigImgBucketPathForWeb"));
                     }
                     if (dataMap.containsKey("hdpiImgBucketPathForApp")) {
-                        imgBucketPathMap.put("hdpiImgBucketPathForApp", (String)dataMap.get("hdpiImgBucketPathForApp"));
+                        imgBucketPathMap.put("hdpi_img_bucket_path_for_app", (String)dataMap.get("hdpiImgBucketPathForApp"));
                     }
                     existingImageInfo.setImgBucketPathMap(imgBucketPathMap);
 
@@ -478,6 +518,7 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
 
         // 将每条记录转换为包含详细信息的 DTO
         Page<DeviceInfoDto> detailPage = page.map(deviceInfo -> {
+
             return convertToDetailDto(deviceInfo);
         });
 
@@ -553,37 +594,53 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
      */
     private void syncDeviceModelTemplate(DeviceModelTemplatePO template, Integer status) {
         try {
-            // 创建RestTemplate实例
-            RestTemplate restTemplate = new RestTemplate();
-
-            // 使用ObjectMapper将对象转换为Map
             ObjectMapper objectMapper = new ObjectMapper();
-            Map<String, Object> templateData = objectMapper.convertValue(template, Map.class);
+            objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
 
-            // 添加状态字段
-            templateData.put("status", status);
+            // Step 1: PO -> VO 转换
+            DeviceModelTemplateActuateVO vo = DeviceModelTemplateActuateVO.builder()
+                    .model(template.getModel())
+                    .hwVersion(template.getHwVersion())
+                    .version(template.getVersion())
+                    .type(template.getType())
+                    .controllerVersion(template.getControllerVersion())
+                    .minControllerVersion(template.getMinControllerVersion())
+                    .notSupportControllerVersion(template.getNotSupportControllerVersion()) // 已经是 List<String>
+                    .ippt(template.getIppt())
+                    .modelType(template.getModelType())
+                    .modelVersion(template.getModelVersion())
+                    .adoptResp(objectMapper.writeValueAsString(template.getAdoptResp())) // Map -> JSON String
+                    .status(status)
+                    .build();
 
-            // 构造集合对象
-            Map<String, Object> requestData = new HashMap<>();
-            requestData.put("deviceModelTemplates", Arrays.asList(templateData));
+            // Step 2: 构造内层对象 {"deviceModelTemplates": [vo]}
+            Map<String, Object> innerBody = new HashMap<>();
+            innerBody.put("deviceModelTemplates", List.of(vo));
 
-            // 序列化为JSON
-            String json = objectMapper.writeValueAsString(requestData);
+            // Step 3: 序列化 innerBody 成字符串（保留转义）
+            String innerJsonString = objectMapper.writeValueAsString(innerBody);
 
-            // 设置请求头
+            // Step 4: 外层包装：{"deviceModelTemplate": "..."}
+            Map<String, String> outerBody = new HashMap<>();
+            outerBody.put("deviceModelTemplate", innerJsonString);
+
+            // 最终 JSON 字符串（用于传输）
+            String finalJson = objectMapper.writeValueAsString(outerBody);
+
+            // Debug 输出
+            System.out.println("Final Request Body: " + finalJson);
+
+            // 发送请求
             HttpHeaders headers = new HttpHeaders();
             headers.setContentType(MediaType.APPLICATION_JSON);
 
-            // 创建请求实体
-            HttpEntity<String> entity = new HttpEntity<>(json, headers);
-
-            // 发送POST请求
-            String url = "http://host/devicemodeltemplate"; // 替换为实际的服务地址
+            HttpEntity<String> entity = new HttpEntity<>(finalJson, headers);
+            RestTemplate restTemplate = new RestTemplate();
+            String url = "http://localhost:9090/actuator/deviceModelTemplate";
             ResponseEntity<String> response = restTemplate.postForEntity(url, entity, String.class);
 
-            // 检查响应状态
             if (!response.getStatusCode().is2xxSuccessful()) {
-                throw new RuntimeException("设备模板同步失败，HTTP状态码: " + response.getStatusCode());
+                throw new RuntimeException("设备模板同步失败，HTTP状态码: " + response.getStatusCode() + ", 响应: " + response.getBody());
             }
 
         } catch (Exception e) {
@@ -598,43 +655,95 @@ public class DeviceInfoServiceImpl implements DeviceInfoService {
      */
     private void syncImageInfo(ImageInfoPO imageInfo, Integer status) {
         try {
-            // 创建RestTemplate实例
-            RestTemplate restTemplate = new RestTemplate();
-
-            // 使用ObjectMapper将对象转换为Map
             ObjectMapper objectMapper = new ObjectMapper();
-            Map<String, Object> imageData = objectMapper.convertValue(imageInfo, Map.class);
+            objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
 
-            // 添加状态字段
-            imageData.put("status", status);
+            // Step 1: 从 imgBucketPathMap 提取所需字段（安全取值，避免 NPE）
+            Map<String, String> pathMap = imageInfo.getImgBucketPathMap() != null ? imageInfo.getImgBucketPathMap() : new HashMap<>();
 
-            // 构造集合对象
-            Map<String, Object> requestData = new HashMap<>();
-            requestData.put("imageInfos", Arrays.asList(imageData));
+            String smallImg = getValueByKey(pathMap, "small_img_bucket_path_for_web", "smallImg");
+            String bigImg = getValueByKey(pathMap, "big_img_bucket_path_for_web", "bigImg");
+            String heatmapImg = getValueByKey(pathMap, "heatmap_img_bucket_path_for_web", "heatmapImg");
+            String appImg = getValueByKey(pathMap, "hdpi_img_bucket_path_for_app", "hdpiImg");
 
-            // 序列化为JSON
-            String json = objectMapper.writeValueAsString(requestData);
+            // 构建 ImageBucketPathActuateVO
+            ImageBucketPathActuateVO bucketPathVO = ImageBucketPathActuateVO.builder()
+                    .smallImgBucketPathForWeb(smallImg)
+                    .bigImgBucketPathForWeb(bigImg)
+                    .heatmapImgBucketPathForWeb(heatmapImg)
+                    .hdpiImgBucketPathForApp(appImg)
+                    .build();
 
-            // 设置请求头
+            // Step 2: 构建主 VO
+            ImageInfoActuateVO vo = ImageInfoActuateVO.builder()
+                    .model(imageInfo.getModel())
+                    .modelVersion(imageInfo.getModelVersion())
+                    .compoundModel(imageInfo.getCompoundModel())
+                    .type(imageInfo.getType())
+                    .imgName(imageInfo.getImageName()) // 注意 PO 是 imageName，VO 是 imgName
+                    .controllerVersion(imageInfo.getControllerVersion())
+                    .minControllerVersion(imageInfo.getMinControllerVersion())
+                    .notSupportControllerVersion(defaultIfNull(imageInfo.getNotSupportControllerVersion(), ArrayList::new))
+                    .imageBucketPathActuateVO(bucketPathVO)
+                    .status(status)
+                    .build();
+
+            // Step 3: 转成 Map 并添加 status 字段
+            Map<String, Object> voMap = objectMapper.convertValue(vo, Map.class);
+
+            // Step 4: 内层包装 {"imageInfos": [...] }
+            Map<String, Object> innerBody = new HashMap<>();
+            innerBody.put("imageInfos", List.of(voMap));
+
+            String innerJsonString = objectMapper.writeValueAsString(innerBody);
+
+            // Step 5: 外层包装 {"imageInfo": "..."}
+            Map<String, String> outerBody = new HashMap<>();
+            outerBody.put("imageInfo", innerJsonString);
+
+            String finalJson = objectMapper.writeValueAsString(outerBody);
+
+            // Debug 输出
+            System.out.println("Final Request Body: " + finalJson);
+
+            // 发送请求
             HttpHeaders headers = new HttpHeaders();
             headers.setContentType(MediaType.APPLICATION_JSON);
 
-            // 创建请求实体
-            HttpEntity<String> entity = new HttpEntity<>(json, headers);
+            HttpEntity<String> entity = new HttpEntity<>(finalJson, headers);
+            RestTemplate restTemplate = new RestTemplate();
+            String url = "http://localhost:9090/actuator/imageInfo";
 
-            // 发送POST请求
-            String url = "http://host/imageinfo"; // 替换为实际的服务地址
             ResponseEntity<String> response = restTemplate.postForEntity(url, entity, String.class);
 
-            // 检查响应状态
             if (!response.getStatusCode().is2xxSuccessful()) {
-                throw new RuntimeException("镜像信息同步失败，HTTP状态码: " + response.getStatusCode());
+                throw new RuntimeException("镜像信息同步失败，HTTP状态码: " + response.getStatusCode() + ", 响应: " + response.getBody());
             }
 
         } catch (Exception e) {
             throw new RuntimeException("镜像信息同步异常: " + e.getMessage(), e);
         }
     }
+
+    // 工具方法：优先按 JSON key 取，其次尝试驼峰 key
+    private String getValueByKey(Map<String, String> map, String snakeKey, String camelSuffix) {
+        if (map == null || map.isEmpty()) return null;
+        // 先尝试下划线 key
+        if (map.containsKey(snakeKey)) {
+            return map.get(snakeKey);
+        }
+        // 再尝试驼峰 key（如 smallImg）
+        String camelKey = Character.toLowerCase(camelSuffix.charAt(0)) + camelSuffix.substring(1);
+        return map.getOrDefault(camelKey, null);
+    }
+
+    // 空值保护
+    private <T> T defaultIfNull(T value, Supplier<T> supplier) {
+        return value != null ? value : supplier.get();
+    }
+
+
+
 
 }
 
